Moved to a common stream API for all the conversion.